--- a/basic/type de donne/index.html
+++ b/basic/type de donne/index.html
@@ -7,6 +7,7 @@
     <title>javascript basics</title>
 </head>
 <body>
-    <h1>day 3 </h1>
+    <h1 style="text-decoration: underline;">type de données!</h1>
+    <script src="./script.js"></script>
 </body>
 </html>
