fin des fonctions

--- a/basic/8.fonctions/index.html
+++ b/basic/8.fonctions/index.html
@@ -7,7 +7,12 @@
     <title>javascript basics</title>
 </head>
 <body>
-    <h1 style="text-decoration: underline;">fonctions</h1>
+    <h1 style="text-decoration: underline;">les fonctions</h1>
+    <ul>
+        <li><h3>les fonctions simple</h3></li>
+        <li><h3>les fonctions expression</h3></li>
+        <li><h3>les fonctions fléchées</h3></li>
+    </ul>
     <script src="./script.js"></script>
 </body>
 </html>
